# Mythical_Conquests_Chronicles

./: CMakeLists.txt  README.md
apps/: main.cpp
assets/: test
include/game/: Animation.hpp  Entity.hpp  Game.hpp  GameEntities.hpp  Map.hpp  Tile.hpp
include/manager/: BodyFactory.hpp  ContactListener.hpp  IActor.hpp  MenuManager.hpp  NetworkManager.hpp  RenderManager.hpp  SoundManager.hpp  TextureManager.hpp  WorldManager.hpp
include/utils/include/: Timer.hpp  constante.h  enum.hpp  utils.hpp
maps/: test.json  test2.json  test_Tile Layer 1.csv  test_Tile Layer 2.csv  tileInfos.json
save/: save1.json
src/game/: Game.cpp  GameEntities.cpp  Map.cpp  Tile.cpp
src/manager/: BodyFactory.cpp  Entity.cpp  MenuManager.cpp  NetworkManager.cpp  RenderManager.cpp  SoundManager.cpp  WorldManager.cpp
testGround/lib/Nuklear-master/demo/sdl_renderer/: main.c
testGround/lib/Nuklear-master/doc/: index.html
testGround/nuclearTest/app/: Makefile  main.cpp  test
